infra/minio/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: minio
  namespace: minio
  annotations:
    lbipam.cilium.io/sharing-key: "lan-shared"
    lbipam.cilium.io/sharing-cross-namespace: "*"
    lbipam.cilium.io/ips: "192.168.1.120"
spec:
  type: LoadBalancer
  selector:
    app: minio
  ports:
    - name: api
      port: 9500
      protocol: TCP
      targetPort: 9000
    - name: console
      port: 9501
      protocol: TCP
      targetPort: 9001
